--- a/ClientApp/src/clientapp/views/Registeration.fxml
+++ b/ClientApp/src/clientapp/views/Registeration.fxml
@@ -10,28 +10,60 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="950.0" style="-fx-background-color: #8CCDF7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clientapp.controllers.RegisterationController">
+<AnchorPane centerShape="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="950.0" style="-fx-background-color: #8CCDF7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clientapp.controllers.RegisterationController">
    <children>
-      <ImageView fitHeight="77.0" fitWidth="302.0" layoutX="390.0" layoutY="14.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="77.0" fitWidth="302.0" layoutX="350.0" layoutY="41.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/Tic%20Tac%20Toe%20Logo.png" />
          </image>
       </ImageView>
-      <Text fill="WHITE" layoutX="400.0" layoutY="172.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration">
+      <Text fill="WHITE" layoutX="384.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registration" textAlignment="CENTER" wrappingWidth="207.43066035211086">
          <font>
             <Font size="33.0" />
          </font>
       </Text>
-      <TextField fx:id="user_name_tf_registration" alignment="CENTER" layoutX="400.0" layoutY="221.0" promptText="User name" />
-      <TextField fx:id="email_tf_registration" layoutX="400.0" layoutY="289.0" promptText="Email@gmail.com" />
-      <PasswordField fx:id="password_tf_registration" layoutX="400.0" layoutY="352.0" promptText="Password" />
-      <PasswordField fx:id="confirm_password_tf_registration" layoutX="400.0" layoutY="409.0" promptText="Confirm password" />
-      <Button fx:id="button_registration" alignment="CENTER" layoutX="400.0" layoutY="477.0" mnemonicParsing="false" onAction="#registerButtonAction" prefWidth="150.0" style="-fx-background-color: #ffffff;" text="Register" />
-      <Text fill="#f5f0f0" layoutX="400.0" layoutY="544.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an account ?" />
-      <Text fx:id="login_text" layoutX="549.0" layoutY="544.0" onMouseClicked="#loginAction" strokeType="OUTSIDE" strokeWidth="0.0" text="login" />
-      <Label fx:id="user_name_label_registration" layoutX="400.0" layoutY="245.0" />
-      <Label fx:id="email_label_registration" layoutX="400.0" layoutY="314.0" />
-      <Label fx:id="password_label_registration" layoutX="400.0" layoutY="377.0" />
-      <Label fx:id="confirm_password_label_registration" layoutX="400.0" layoutY="434.0" />
+      <TextField fx:id="user_name_tf_registration" alignment="TOP_LEFT" layoutX="384.0" layoutY="233.0" prefHeight="25.0" prefWidth="207.0" promptText="User name" />
+      <TextField fx:id="email_tf_registration" layoutX="384.0" layoutY="295.0" prefHeight="25.0" prefWidth="207.0" promptText="Email@gmail.com" />
+      <PasswordField fx:id="password_tf_registration" layoutX="384.0" layoutY="352.0" prefHeight="25.0" prefWidth="207.0" promptText="Password" />
+      <PasswordField fx:id="confirm_password_tf_registration" layoutX="384.0" layoutY="409.0" prefHeight="25.0" prefWidth="207.0" promptText="Confirm password" />
+      <Button fx:id="button_registration" alignment="CENTER" layoutX="384.0" layoutY="464.0" mnemonicParsing="false" onAction="#registerButtonAction" prefHeight="30.0" prefWidth="207.0" style="-fx-background-color: #ffffff;" text="Register" textFill="#8ccdf7">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Text fill="#f5f0f0" layoutX="371.0" layoutY="527.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an account ?">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
+      <Text fx:id="login_text" fill="WHITE" layoutX="599.0" layoutY="528.0" onMouseClicked="#loginAction" strokeType="OUTSIDE" strokeWidth="0.0" text="login" underline="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Label fx:id="user_name_label_registration" layoutX="384.0" layoutY="258.0" prefHeight="17.0" prefWidth="207.0" textFill="#ff2626" />
+      <Label fx:id="email_label_registration" layoutX="384.0" layoutY="323.0" prefHeight="17.0" prefWidth="207.0" textFill="#ff2626" />
+      <Label fx:id="password_label_registration" layoutX="384.0" layoutY="377.0" prefHeight="17.0" prefWidth="207.0" textFill="#ff2626" />
+      <Label fx:id="confirm_password_label_registration" layoutX="384.0" layoutY="434.0" prefHeight="17.0" prefWidth="207.0" textFill="#ff2626" />
+      <Label alignment="CENTER" layoutX="384.0" layoutY="213.0" text="Name" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="384.0" layoutY="331.0" text="Password" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="384.0" layoutY="275.0" text="Email" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="384.0" layoutY="386.0" text="ConfirmPassword" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
