--- a/ClientApp/src/clientapp/views/HomePage.fxml
+++ b/ClientApp/src/clientapp/views/HomePage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,6 +20,7 @@
                         <Image url="@../assets/Tic%20Tac%20Toe%20Logo.png" />
                      </image>
                   </ImageView>
+                  <CheckBox fx:id="recordBtn" layoutX="570.0" layoutY="95.0" mnemonicParsing="false" text="Record" />
                </children>
             </AnchorPane>
             <VBox alignment="TOP_CENTER" prefHeight="505.0" prefWidth="750.0">
