--- a/ClientApp/src/clientapp/views/onlineClientsList.fxml
+++ b/ClientApp/src/clientapp/views/onlineClientsList.fxml
@@ -39,6 +39,7 @@
                </children>
             </Pane>
             <Button fx:id="sendRequest" layoutX="630.0" layoutY="28.0" mnemonicParsing="false" onAction="#sendingRequestBtn" prefHeight="31.0" prefWidth="254.0" text="sending request test" />
+            <Button fx:id="refresh" layoutX="139.0" layoutY="13.0" mnemonicParsing="false" onAction="#refreshList" text="Refresh" />
          </children>
       </AnchorPane>
    </center>
