--- a/ClientApp/src/clientapp/views/Login.fxml
+++ b/ClientApp/src/clientapp/views/Login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #8CCDF7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clientapp.controllers.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="950.0" style="-fx-background-color: #8CCDF7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clientapp.controllers.LoginController">
    <top>
       <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
          <image>
@@ -28,7 +28,7 @@
             <PasswordField fx:id="password_tf_login" layoutX="226.0" layoutY="138.0" promptText="Password" />
             <Label fx:id="user_name_label" layoutX="226.0" layoutY="112.0" />
             <Label fx:id="password_label" layoutX="226.0" layoutY="163.0" />
-            <Button fx:id="button_login" layoutX="274.0" layoutY="204.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Login" textFill="#8ccdf7" />
+            <Button fx:id="button_login" layoutX="274.0" layoutY="204.0" mnemonicParsing="false" onAction="#loginButtonClicked" style="-fx-background-color: #ffffff;" text="Login" textFill="#8ccdf7" />
             <HBox alignment="CENTER" layoutX="200.0" layoutY="229.0" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Dont have an account ?" />
