--- a/ClientApp/src/clientapp/views/GameRequestPane.fxml
+++ b/ClientApp/src/clientapp/views/GameRequestPane.fxml
@@ -8,15 +8,21 @@
 
 <Pane fx:id="gameRequestPane" prefHeight="400.0" prefWidth="328.0" style="-fx-background-color: #3498db;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clientapp.controllers.GameRequestController">
    <children>
-      <Pane layoutY="2.0" prefHeight="400.0" prefWidth="328.0" style="-fx-background-color: #3498db;">
+      <Pane layoutY="2.0" prefHeight="400.0" prefWidth="328.0" style="-fx-background-color: #629cba;">
          <children>
             <Label fx:id="playerRequesting" alignment="CENTER" contentDisplay="RIGHT" layoutX="2.0" prefHeight="131.0" prefWidth="330.0" text="Online Users" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="26.0" />
                </font>
             </Label>
-            <Button layoutX="14.0" layoutY="317.0" mnemonicParsing="false" onAction="#acceptBtnAction" prefHeight="31.0" prefWidth="112.0" text="Accept" />
-            <Button layoutX="198.0" layoutY="317.0" mnemonicParsing="false" onAction="#refuseBtnAction" prefHeight="31.0" prefWidth="112.0" text="Refuse" />
+            <Button layoutX="32.0" layoutY="313.0" mnemonicParsing="false" onAction="#acceptBtnAction" prefHeight="27.0" prefWidth="95.0" style="-fx-background-radius: 20;" text="Accept" textFill="#629cba">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Button>
+            <Button layoutX="192.0" layoutY="313.0" mnemonicParsing="false" onAction="#refuseBtnAction" prefHeight="27.0" prefWidth="95.0" style="-fx-background-radius: 20;" text="Refuse" textFill="#629cba">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Button>
             <ProgressBar fx:id="progressBar" layoutY="373.0" prefHeight="27.0" prefWidth="330.0" progress="0.0" />
          </children>
       </Pane>
