--- a/ClientApp/src/clientapp/views/Board.fxml
+++ b/ClientApp/src/clientapp/views/Board.fxml
@@ -151,12 +151,12 @@
                   </Button>
                </children>
             </GridPane>
-            <Line endX="-276.66668701171875" endY="317.66668701171875" layoutX="870.0" layoutY="49.0" startX="-276.66668701171875" startY="-98.33333587646484" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
+            <Line endX="-276.66668701171875" endY="317.66668701171875" layoutX="870.0" layoutY="49.0" startX="-276.66668701171875" startY="-96.99998474121094" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Line endX="-54.333343505859375" endY="337.0" layoutX="376.0" layoutY="35.0" startX="-54.333343505859375" startY="-78.0" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Line endX="860.0" endY="238.0" startX="50.0" startY="238.0" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Line endX="864.3333129882812" endY="-43.0" startX="864.3333129882812" startY="369.33331298828125" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Line endX="864.3333129882812" endY="-49.0" layoutY="1.0" startX="51.0" startY="-49.0" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
-            <Line endX="50.0" endY="372.0" startX="49.66666793823242" startY="-43.0" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
+            <Line endX="50.0" endY="372.0" startX="50.0" startY="-47.0" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Line endX="863.3333129882812" endY="377.33331298828125" layoutX="1.0" layoutY="-3.0" startX="49.0" startY="375.0" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Line endX="859.0" endY="541.3333740234375" layoutX="1.0" layoutY="-452.0" startX="49.0" startY="541.3333740234375" stroke="WHITE" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="10.0" />
             <Pane fx:id="ResultPane" layoutX="176.0" layoutY="36.0" prefHeight="290.0" prefWidth="618.0" style="-fx-background-color: #ffffff;" visible="false">
