--- a/ClientApp/src/clientapp/views/GameInitializer.fxml
+++ b/ClientApp/src/clientapp/views/GameInitializer.fxml
@@ -64,5 +64,10 @@
             <Font size="21.0" />
          </font>
       </Label>
+      <ImageView fx:id="homeButton" fitHeight="53.0" fitWidth="69.0" layoutX="43.0" layoutY="33.0" onMouseClicked="#homeButton" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/HomeLogo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
