--- a/ClientApp/src/clientapp/views/Login.fxml
+++ b/ClientApp/src/clientapp/views/Login.fxml
@@ -51,5 +51,10 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
+      <ImageView fx:id="homeButton" fitHeight="53.0" fitWidth="69.0" layoutX="48.0" layoutY="53.0" onMouseClicked="#homeButton" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/HomeLogo.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
