--- a/ClientApp/src/clientapp/views/onlineClientsList.fxml
+++ b/ClientApp/src/clientapp/views/onlineClientsList.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
@@ -27,7 +27,7 @@
                   <Image url="@../assets/Tic%20Tac%20Toe%20Logo.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="logoutBtn" fitHeight="60.0" fitWidth="59.0" layoutX="819.0" layoutY="43.0" onMouseClicked="#logoutAction" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="logoutBtn" fitHeight="60.0" fitWidth="59.0" layoutX="819.0" layoutY="23.0" onMouseClicked="#logoutAction" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../assets/icons8-logout-48.png" />
                </image>
@@ -42,6 +42,11 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
+            <CheckBox fx:id="onlineGameRecord" layoutX="14.0" layoutY="85.0" mnemonicParsing="false" text="Record Games" textFill="WHITE">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </CheckBox>
          </children>
       </Pane>
    </top>
